<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/shape_primary_10"
        android:backgroundTint="#f5f6f7"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/choose_account_type"
            android:textColor="@color/primary"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/patient"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:background="@drawable/shape_primary_20"
                android:fontFamily="@font/cairo_bold"
                android:gravity="center"
                android:paddingVertical="7dp"
                android:text="@string/patient"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/doctor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:background="@drawable/shape_primary_20"
                android:fontFamily="@font/cairo_bold"
                android:gravity="center"
                android:paddingVertical="7dp"
                android:text="@string/doctor"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>