<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/shape_primary_10"
        android:backgroundTint="#f5f6f7"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/photo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:adjustViewBounds="true"
                android:background="@color/white"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_alert" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:fontFamily="@font/cairo_bold"
                android:paddingTop="2dp"
                android:text="@string/alert"
                android:textColor="@color/black" />

        </LinearLayout>

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/cairo_regular"
            android:textColor="@color/black"
            tools:text="@string/app_name" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginVertical="5dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/cairo_regular"
                android:paddingHorizontal="10dp"
                android:paddingVertical="7dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/red"
                tools:ignore="TextContrastCheck" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="5dp"
                android:fontFamily="@font/cairo_regular"
                android:paddingHorizontal="10dp"
                android:paddingVertical="7dp"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>