<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".controller.activities.other.PostsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/appbar"
            layout="@layout/content_appbar_back" />

        <TextView
            android:id="@+id/subscribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_primary_10"
            android:fontFamily="@font/cairo_bold"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/subscribe"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_primary_10"
            android:fontFamily="@font/cairo_bold"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/edit_current_category"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_primary_10"
            android:fontFamily="@font/cairo_bold"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/add_new_post"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:visibility="gone"
            tools:visibility="visible" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.gturedi.views.StatefulLayout
                android:id="@+id/stateful"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:stfAnimationEnabled="true">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_post" />

            </com.gturedi.views.StatefulLayout>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_chat"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>