<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".controller.activities.other.AddCategoryActivity">

    <include
        android:id="@+id/appbar"
        layout="@layout/content_appbar_back" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/category_title"
                android:textColor="@color/primary"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="8dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:hintTextColor="@color/hint_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edit_text"
                    android:fontFamily="@font/cairo_regular"
                    android:hint="@string/category_title"
                    android:inputType="text"
                    android:maxLines="3"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="13dp"
                    android:textAlignment="textStart"
                    android:textColor="@color/primary"
                    android:textColorHint="@color/hint_color"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/category_description"
                android:textColor="@color/primary"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="8dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:hintTextColor="@color/hint_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edit_text"
                    android:fontFamily="@font/cairo_regular"
                    android:gravity="start"
                    android:hint="@string/category_title"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="13dp"
                    android:textAlignment="textStart"
                    android:textColor="@color/primary"
                    android:textColorHint="@color/hint_color"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_primary_30"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/remove"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/shape_primary_30"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/remove"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:visibility="gone"
                app:backgroundTint="@color/red"
                tools:visibility="visible" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>