<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".controller.activities.other.GroupMessagesActivity">

    <LinearLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/app_name"
            android:paddingHorizontal="15dp"
            android:src="@drawable/ic_arrow_back" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:ems="3"
                android:fontFamily="@font/cairo_bold"
                android:lines="1"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textSize="15sp"
                tools:text="Title Title " />

            <TextView
                android:id="@+id/online"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:ems="3"
                android:fontFamily="@font/cairo_regular"
                android:lines="1"
                android:text="@string/online"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/layoutMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:stackFromEnd="true"
        tools:listitem="@layout/item_sent_message" />

    <LinearLayout
        android:id="@+id/layoutMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imgPlus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:paddingHorizontal="10dp"
            android:src="@drawable/ic_add"
            android:visibility="gone"
            app:tint="@color/white" />

        <EditText
            android:id="@+id/message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:autofillHints="name"
            android:background="@drawable/shape_primary_20"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/cairo_regular"
            android:hint="@string/write_here"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="12sp"
            tools:ignore="LabelFor,TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/imgSent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape_primary_oval"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/app_name"
            android:padding="10dp"
            android:src="@drawable/ic_sent_message"
            app:shapeAppearance="@style/ImageView.circle"
            app:tint="@color/colorPrimary"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>